fix(components): webkit autofill styles on Safari | oh | #937

--- a/packages/components/src/components/form/text-field-wrapper/text-field-wrapper.scss
+++ b/packages/components/src/components/form/text-field-wrapper/text-field-wrapper.scss
@@ -99,6 +99,11 @@
   -webkit-background-clip: text !important;
 }
 
+::slotted(input:-webkit-autofill),
+::slotted(input:-webkit-autofill:focus) {
+  -webkit-background-clip: text !important;
+}
+
 .#{$p-global-class-prefix}text-field-wrapper {
   $bem-block: &;
 
